# Chess

./: CMakeLists.txt  ]
src/: helper-functions.cpp  helper-functions.h  helper-functions.hpp  main.cpp
src/board/: board.cpp  board.h  board.hpp
src/board/pieces/: pieces.cpp  pieces.h  pieces.hpp
src/board/pieces/move-sets/: move-set.cpp  move-set.h  move-set.hpp
src/board/pieces/piece-templates/: piece-template.cpp  piece-template.hpp
src/board/square/: square.cpp  square.h  square.hpp
src/piece/: piece.cpp  piece.h
src/square/: square.cpp  square.h
src/windows/: windows.cpp  windows.hpp
tests/: test.cpp
